[package]
name = "dice_game"
version = "0.1.0"
authors = ["craigbell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { git = "https://github.com/rust-lang-nursery/rand" }

[[bin]]
name = "dice_game"
path = "dice_game.rs"
